--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,7 +5,7 @@ $secondary-color: #CCDC70;
 $tertiary-color: #404752;
 
 $font-color: #113B09;
-$font-color-accent: #b4b3b3;
+$font-color-accent: #44464F;
 
 $bg-color: #F7F4E8;
 $black: #000000;
