--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,7 +11,7 @@ nav.navbar{
     width: 100%;
     display: flex;
     height: 110px;
-    position: absolute;
+    // position: absolute;
     top: 0;
     box-sizing: border-box;
     background: transparent !important;
@@ -154,6 +154,7 @@ nav.navbar{
                 border-radius: 5px;
                 transition: .4s ease;
                 color: $font-color;
+                padding:0 $padding-base * 0.8;
                 &:hover{
                     transition: .4s ease;
                     background: $primary-color;
@@ -432,227 +433,219 @@ nav.navbar{
 
 
 
-// .main{
-//     width: 100%;
-//     height: fit-content;
-//     box-sizing: border-box;
-//     overflow-x: hidden;
-//     position: relative;
-//     padding: 0;
-//     margin: 0;
-//     // padding: 1rem 1.2rem;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     /* Scrollbar styles */
-//     &::-webkit-scrollbar {
-//         width: 12px; /* Width of the scrollbar */
-//     }
+.main{
+    width: 100%;
+    height: fit-content;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    // padding: 1rem 1.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* Scrollbar styles */
+    &::-webkit-scrollbar {
+        width: 12px; /* Width of the scrollbar */
+    }
 
-//     &::-webkit-scrollbar-track {
-//         background: #f1f1f1; /* Background of the track (scroll area) */
-//     }
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1; /* Background of the track (scroll area) */
+    }
 
-//     &::-webkit-scrollbar-thumb {
-//         background-color: #888; /* Scrollbar thumb (the actual bar) */
-//         border-radius: 10px; /* Roundness of the scrollbar */
-//         border: 3px solid #f1f1f1; /* Padding around the thumb */
-//     }
+    &::-webkit-scrollbar-thumb {
+        background-color: #888; /* Scrollbar thumb (the actual bar) */
+        border-radius: 10px; /* Roundness of the scrollbar */
+        border: 3px solid #f1f1f1; /* Padding around the thumb */
+    }
 
-//     &::-webkit-scrollbar-thumb:hover {
-//         background-color: #555; /* Darker color when hovering over the scrollbar */
-//     }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: #555; /* Darker color when hovering over the scrollbar */
+    }
 
-//     .overlay{
-//         width: 100%;
-//         height: 100%;
-        
-//         display: none;
-//         flex-direction: column;
-//         position: absolute;
-//         z-index: 20;
-//         &.side-actions-active{
-//             display: flex !important;
-//             background: rgba(0, 0, 0, 0.3);
-//             backdrop-filter: blur(2px) !important;
-           
-            
-//         }
-//     }
-//     .landingpage{
-        
-//         width: 100%;
-//         height: 97vh;
-//         box-sizing: border-box;
-//         margin-bottom: 2rem;
-//         position: relative;
-//         overflow:hidden;
-//         display: flex;
-//         flex-direction: column;
-        
-//         justify-content: center;
-//         align-items: center;
-//         background: url(../images/landingpage-bg.png) no-repeat center center;
-//         background-size:cover;
-//         .overlay-bg{
-//             width: 100%;
-//             height: 97vh;
-//             background: linear-gradient(180deg,rgba(48, 47, 47, 0.71) 0%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.6) 100%);
-            
-//             z-index: 3;
-            
-//             position: absolute;
-//         }
-//         video,img{
-//             width: 100%;
-//             height: 83vh;
-//             object-fit: cover;
-//             background-position: center;
-            
-//             z-index: -1;
-//             box-sizing: border-box;
-           
-//             top: 0;
-            
-            
-//         }
-       
-//         .text-content{
-            
-//             z-index: 4;
-//             position: absolute;
-//             bottom: 5%;
-//             width: 70%;
-//             height: fit-content;
-//             padding: 1.5%;
-//             display: flex;
-//             align-items: center;
-//             flex-direction: column;
-//             gap: .5rem;
-//             border-radius: 10px;
-            
-           
-
-//             h1{
-//                 color: $white;
-//                 font-size: $base-font-size * 3;
-//                 text-align: center;
-//                 font-weight:normal;
-//                 word-spacing: .1cm;
-                
-//                 text-transform:capitalize;
-//                 font-family: 'Poppins', sans-serif;
-//                 margin: 0;
-//             }
-//             p{
-//                 color: $white;
-//                 font-size: $base-font-size * 1.15;
-//                 font-weight: 500;
-//                 width: 70%;
-//                 text-align: center;
-//                 margin-bottom: 1rem;
-//             }
-//             .tags{
-//                 display: flex;
-//                 gap: 1.5rem;
-               
-//                 width: 100%;
-//                 align-items: center;
-//                 justify-content: center;
-//                 span{
-//                     font-size: $base-font-size * 1.1;
-//                     color: #dfdddd;
-//                     padding: .5rem;
-//                     font-weight: normal;
-//                 }
-//             }
-            
-           
-//             .action-btns{
-//                 display: flex;
-//                 gap: 1rem;
-//                 .btn{
-//                     @include button-style($white, white);
-//                     min-width: 10rem;
-                    
-                    
-//                     background: transparent;
-//                     display: flex;
-//                     align-self: center;
-//                     justify-content: center;
-//                     gap: .5rem;
-//                     color: $white;
-//                     border: 1px solid white;
-//                     border-radius: 50px 50px;
-//                     &:hover{
-//                         transition: .3s ease;
-//                         color: $black;
-//                         background: $white;
-//                     }
-//                     &.download-btn{
-//                         background: $primary-color;
-//                         border: 1px solid $primary-color;
-//                         color: $black;
-//                         &:hover{
-//                             transition: .3s ease;
-//                             background: $black;
-//                             color: $white;
-//                             border: 1px solid $black;
-//                         }
-//                     }
-//                 }
-//             }
-//         }
-
-
-//         @media (max-width: $breakpoint-mobile) {
-            
-            
-//             .text-content{
-//                 bottom: 10%;
-//                 width: 100%;                
-//                 padding: 1rem;
-                
-//                 gap: 1.5rem;
-//                 h1{
-//                     width: 100%;
-//                     font-size: $base-font-size * 3.7;
-//                     display: flex;
-//                     flex-direction: column;
-//                     align-items: flex-start;
-//                     span{
-//                         &:nth-child(2){
-//                             align-self: center;
-//                         }
-//                         &:nth-child(3){
-//                             align-self: flex-end;
-//                         }
-                        
-//                     }
-//                 }
-//                 .tags{
-//                     width: 100%;
-//                     gap: 0;
-                    
-//                     justify-content: space-between;
-//                     span{
-//                         font-size: $base-font-size * .9;
-                        
-//                         text-underline-offset: .25rem;
-//                         padding: .5rem 0;
-//                     }
-//                 }
-//                 .action-btns{
-//                     justify-content: space-around;
-//                     width: 100%;
-//                     a.btn{
-//                         font-size: $base-font-size * 1;
-//                     }
-//                 }
-//             }
-//         }
-//     }
     
+    .landingpage{
+        
+        width: 100%;
+        min-height: 60vh;
+        height: fit-content;
+        box-sizing: border-box;
+        margin-bottom: 2rem;
+        position: relative;
+        overflow:hidden;
+        display: flex;
+        flex-direction: row;
+        padding: $base-font-size * 1.5;
+        justify-content: flex-start;
+        align-items: center;
+           
+        
+        
+        img{
+            width: 50%;
+            height: 100%;
+            object-fit: contain;
+            background-position: center;
+            
+            z-index: -1;
+            box-sizing: border-box;
+           
+            top: 0;
+            
+            
+        }
+       
+        .text-content{
+            
+            width: 50%;
+            height: fit-content;
+            padding: $base-font-size * 1.5;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 1.5rem;
+            
+          
+           
+
+            h1{
+                color: $white;
+                font-size: $base-font-size * 3;
+                line-height: $base-font-size * 4;
+                font-weight:500;
+                word-spacing: .1cm;
+                color: $black;
+                // text-transform:capitalize;
+                font-family: 'Poppins', sans-serif;
+                margin: 0;
+
+            }
+            p{
+                color: $font-color-accent;
+                font-size: $base-font-size * 1;
+                font-weight: normal;
+                width: 100%;
+                margin-bottom: 1rem;
+            }
+           
+            
+           
+            .action-btns{
+                display: flex;
+                gap: $base-font-size * 1.5;
+               
+                width: 100%;
+                a.donate-btn{
+                @include button-style($white, white);
+                min-width: 8rem;
+                background: $secondary-color;
+                display: flex;
+                align-self: center;
+                align-items: center;
+                justify-content: flex-end;
+                gap: .5rem;
+                transition: .4s ease;;
+                border-radius: 5px;
+                position: relative;
+                border: 1px solid $secondary-color;
+                line-height: 45px;
+                span{
+                    
+                    width: 100%;
+                    display: flex;
+                    padding-left: 5px;
+                    justify-self: flex-start;
+                    align-self: start;
+                    align-items: flex-start;
+                }
+                &:hover{
+                    transition: .4s ease;
+                    background: $primary-color;
+                    color: $white;
+                    border: 1px solid $primary-color;
+                }
+                i.bx{
+                    display: flex;
+                    width: 50%;
+                    align-items: flex-end;
+                    justify-content: flex-end; 
+                    position: absolute;
+                    font-size: 30px;
+                    
+                }
+                
+                
+                }
+                a.contact-btn{
+                    @include button-style($white, white);
+                    background: transparent;
+                    min-width: 8rem;
+                    border: 1px solid $primary-color;
+                    border-radius: 5px;
+                    transition: .4s ease;
+                    color: $font-color;
+                    line-height: 45px;
+                    padding:0 $padding-base * 0.8;
+                    &:hover{
+                        transition: .4s ease;
+                        background: $primary-color;
+                        color: $white;
+                    }
+                }
+            }
+        }
+
+
+        @media (max-width: $breakpoint-mobile) {
+            
+            
+            .text-content{
+                bottom: 10%;
+                width: 100%;                
+                padding: 1rem;
+                
+                gap: 1.5rem;
+                h1{
+                    width: 100%;
+                    font-size: $base-font-size * 3.7;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    span{
+                        &:nth-child(2){
+                            align-self: center;
+                        }
+                        &:nth-child(3){
+                            align-self: flex-end;
+                        }
+                        
+                    }
+                }
+                .tags{
+                    width: 100%;
+                    gap: 0;
+                    
+                    justify-content: space-between;
+                    span{
+                        font-size: $base-font-size * .9;
+                        
+                        text-underline-offset: .25rem;
+                        padding: .5rem 0;
+                    }
+                }
+                .action-btns{
+                    justify-content: space-around;
+                    width: 100%;
+                    a.btn{
+                        font-size: $base-font-size * 1;
+                    }
+                }
+            }
+        }
+    }
+}
 //     //Why Us Section
 //     .why-section{
 //         width: 100%;
